# PassPro

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cryptography.cpp  CryptographyStorage.cpp  DatabaseManager.cpp  DatabaseManager.h  DatabaseObject.cpp  DatabaseObject.h  Final Presentation - Pass Pro.pptx  LICENSE  Logo.qrc  PassPro.sln  PasswordAdd.ui.bac  PasswordEntry.cpp  PasswordEntry.h  Presentation_PassPro.pptx  Program.cs  README-Instructions.md  README.md  SecureString.cpp  branchinfo - REMOVE BEFORE MERGE.md  entryviewer.cpp  entryviewer.h  entryviewer.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  testing.cpp
Cryptography/: Cryptography.cpp  Cryptography.h  CryptographyStorage.cpp  CryptographyStorage.h
Data Storage/: DatabaseManager.cpp  DatabaseManager.h  DatabaseObject.cpp  DatabaseObject.h
Data Structures/: PasswordEntry.cpp  PasswordEntry.h  SecureString.cpp
Data_Storage/: DatabaseManager.cpp  DatabaseManager.h  DatabaseObject.cpp  DatabaseObject.h
Data_Structures/: PasswordEntry.cpp  PasswordEntry.h  SecureString.cpp
PassPro/: CMakeLists.txt  PassPro.sln  Program.cs  entry.h  entry.ui  login.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
PassPro/PassPro/: PassPro.csproj  Program.cs
PassPro/PassPro/Properties/: AssemblyInfo.cs
Testing/: Cryptography.h  DatabaseObject.cpp  PasswordEntry.cpp  SanitizeTest.h  Searching.h  Testing.cpp  main.cpp
Testing/Testing/: Cryptography.cpp  CryptographyStorage.cpp  CryptographyStorage.h  DatabaseManager.cpp  EncryptionTest.h  PasswordEntry.cpp  SanitizeTest.h  Searching.h  Testing.cpp  main.cpp
Testing/Testing/x64/Debug/: Testing.exe.recipe
Testing/Testing/x64/Debug/Testing.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Testing.lastbuildstate  Testing.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Testing/x64/Debug/Testing.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Testing.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
